tests/negative/gold/indent9_test.gold
tests/negative/indent9_test.toit:8:21: error: Invalid type
      bar: |x / y.z.t?|
                    ^
Compilation failed.
